--- a/Assignment6/web/index.html
+++ b/Assignment6/web/index.html
@@ -11,10 +11,13 @@ and open the template in the editor.
         <div ng-controller="msgCtrl">
             Assignment 6 - Unreal War
             <p>
-                Author:<input ng-model="author" />
+                Id#:<input ng-model="id" />
             </p>
             <p>
-                Message:<input ng-model="message" />    
+                Title:<input ng-model="title" />    
+            </p>
+            <p>
+                Contents:
             </p>
             <button ng-click="addMessage()">Post</button>
             <ul>
